--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="plot_epw.js" defer></script> <!-- Adding the script for graph generation -->
   </head>
@@ -16,7 +16,7 @@
       <header id="header">
         <div class="inner">
           <a href="index.html" class="logo">
-            <span class="symbol"><img src="images/logo.jpg" alt="" /></span>
+            <span class="symbol"><img src="logo.jpg" alt="" /></span>
             <span class="title">Infrared City Intern Project</span>
           </a>
         </div>
