--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Phantom by HTML5 UP</title>
+    <title>Laddership Intern Project</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -31,7 +31,7 @@
             <p>This is an interactive climate analysis project created by InfraredCity Interns. Select your EPW file and your graph type below.</p>
           </header>
 
-          <!-- Adding file input for EPW files and a chart area -->
+          <!-- Adding file input for EPW files -->
           <section>
             <label for="fileInput">Select EPW File:</label>
             <input type="file" id="fileInput" accept=".epw" />
