--- a/index.html
+++ b/index.html
@@ -1,48 +1,104 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Laddership Intern Project</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="main.css" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <title>Data Visualization Dashboard with EPW Data</title>
+    <link rel="stylesheet" href="main.css" /> <!-- Link to the external CSS file from Website 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="plot_epw.js" defer></script> <!-- Adding the script for graph generation -->
-  </head>
-  <body class="is-preload">
+    <style>
+        /* Additional styles for layout */
+        .chart-section {
+            display: none; /* Hide all charts initially */
+            margin-bottom: 40px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .button-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .button-container button {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            cursor: pointer;
+            margin: 0 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button-container button:hover {
+            background-color: #2980b9;
+        }
+
+        /* Responsive container styles */
+        .chart-container {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body class="is-preload">
     <div id="wrapper">
-      <header id="header">
-        <div class="inner">
-          <a href="index.html" class="logo">
-            <span class="symbol"><img src="logo.jpg" alt="" /></span>
-            <span class="title">Infrared City Intern Project</span>
-          </a>
+        <header id="header">
+            <div class="inner">
+                <a href="index.html" class="logo">
+                    <span class="symbol"><img src="logo.jpg" alt="" /></span>
+                    <span class="title">Infrared City Intern Project</span>
+                </a>
+            </div>
+        </header>
+
+        <div id="main">
+            <div class="inner">
+                <header>
+                    <h1>Ladder Internship Interactive Climate Analysis Project</h1>
+                    <p>This is an interactive climate analysis project created by InfraredCity Interns. Select your EPW file and your graph type below.</p>
+                </header>
+
+                <!-- File Input for EPW file -->
+                <section>
+                    <label for="fileInput">Select EPW File:</label>
+                    <input type="file" id="fileInput" accept=".epw">
+                </section>
+
+                <!-- Button container for graph types -->
+                <section>
+                    <div class="button-container">
+                        <button onclick="showChart('cloudCoverage')">Show Cloud Average</button>
+                        <button onclick="showChart('heatmap')">Show Heatmap</button>
+                        <button onclick="showChart('temperature')">Show Temperature Graph</button>
+                    </div>
+                </section>
+
+                <!-- Chart sections -->
+                <section class="chart-section" id="cloudCoverageContainer">
+                    <h2>Cloud Coverage</h2>
+                    <canvas id="cloudCoverageChart"></canvas>
+                </section>
+
+                <section class="chart-section" id="heatmapContainer">
+                    <h2>Heatmap</h2>
+                    <div class="heatmap chart-container" id="heatmap"></div>
+                </section>
+
+                <!-- Temperature Graph from Website 2 -->
+                <section class="chart-section" id="temperatureContainer">
+                    <h2>Average Daily Dry Bulb Temperature</h2>
+                    <div id="chart" class="chart-container"></div>
+                </section>
+            </div>
         </div>
-      </header>
-
-      <div id="main">
-        <div class="inner">
-          <header>
-            <h1>
-              Ladder Internship Interactive Climate Analysis Project
-            </h1>
-            <p>This is an interactive climate analysis project created by InfraredCity Interns. Select your EPW file and your graph type below.</p>
-          </header>
-
-          <!-- Adding file input for EPW files -->
-          <section>
-            <label for="fileInput">Select EPW File:</label>
-            <input type="file" id="fileInput" accept=".epw" />
-          </section>
-
-          <section>
-            <div id="chart" style="width:100%;height:500px;"></div>
-          </section>
-
-        </div>
-      </div>
     </div>
-  </body>
+
+    <script src="script.js"></script> <!-- Link to the separated JavaScript file -->
+</body>
 </html>
