--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script> <!-- Link to the separated JavaScript file -->
+    <script src="plot_epw.js"></script> <!-- Link to the separated JavaScript file -->
 </body>
 </html>
